# smplx.js

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: check.yml  publish.yml
demo/: index.html  package.json  tsconfig.app.json  vite.config.ts
demo/src/: App.vue  style.css
demo/src/components/: Render.vue
src/: DenseMatrix.h  binding.cpp
tests/: smpl.ts
